--- a/topmodel_fromscratch_2_23_23.Rmd
+++ b/topmodel_fromscratch_2_23_23.Rmd
@@ -21,27 +21,27 @@ p_load(dynatopGIS, tidyverse, raster, rgdal, sp, mapview,
 dem <- raster("./w3_dem.tif")
 
 
-wbt_d_inf_flow_accumulation(input = "McDonaldHollowDEM/bmstationdem_filled_breached.tif",
-                            output = "McDonaldHollowDEM/DinfFAsca.tif",
-                            out_type = "Specific Contributing Area")
-
-wbt_slope(dem = "McDonaldHollowDEM/bmstationdem_filled_breached.tif",
-          output = "McDonaldHollowDEM/demslope.tif",
-          units = "degrees")
-
-wbt_wetness_index(sca = "McDonaldHollowDEM/DinfFAsca.tif",
-                  slope = "McDonaldHollowDEM/demslope.tif",
-                  output = "McDonaldHollowDEM/TWI.tif")
-
-twi <- raster("McDonaldHollowDEM/TWI.tif")
-
-twi[twi > 0] <- NA
-
-tm_shape(hillshade)+
-  tm_raster(style = "cont",palette = "-Greys", legend.show = FALSE)+
-tm_shape(twi)+
-  tm_raster(style = "cont", palette = "PuOr", legend.show = TRUE, alpha = 0.5)+
-  tm_scale_bar()
+# wbt_d_inf_flow_accumulation(input = "McDonaldHollowDEM/bmstationdem_filled_breached.tif",
+#                             output = "McDonaldHollowDEM/DinfFAsca.tif",
+#                             out_type = "Specific Contributing Area")
+# 
+# wbt_slope(dem = "McDonaldHollowDEM/bmstationdem_filled_breached.tif",
+#           output = "McDonaldHollowDEM/demslope.tif",
+#           units = "degrees")
+# 
+# wbt_wetness_index(sca = "McDonaldHollowDEM/DinfFAsca.tif",
+#                   slope = "McDonaldHollowDEM/demslope.tif",
+#                   output = "McDonaldHollowDEM/TWI.tif")
+# 
+# twi <- raster("McDonaldHollowDEM/TWI.tif")
+# 
+# twi[twi > 0] <- NA
+# 
+# tm_shape(hillshade)+
+#   tm_raster(style = "cont",palette = "-Greys", legend.show = FALSE)+
+# tm_shape(twi)+
+#   tm_raster(style = "cont", palette = "PuOr", legend.show = TRUE, alpha = 0.5)+
+#   tm_scale_bar()
 ```
 
 TEST
